@@ -1,8 +1,13 @@
 siduxcc (0.9.31) UNRELEASED; urgency=low
 
+  [ Stefan Lippers-Hollmann ]
   * NOT RELEASED YET
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 17 Mar 2008 02:44:42 +0100
+  [ Fabian Wuertz ]
+  * debian: konsole dependency added (solves the problems with the icewm)
+  * hermes: descriptions updated
+
+ -- Fabian Wuertz <xadras@sidux.com>  Sun, 23 Mar 2008 19:21:45 +0100
 
 siduxcc (0.9.30) unstable; urgency=low
 
